--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.0",
+    "tailwind-scrollbar": "^3.1.0",
     "windicss": "^3.5.6"
   },
   "devDependencies": {
