--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.0",
     "tailwind-scrollbar": "^3.1.0",
